fix: sizing grid cards tablet activite section. Amélioration de la version tablette de la section activités. Ajout d'un flex wrap pour que les filtres reviennent à la ligne (améliorant significativement la vue sur écran portable). Augmentation de la marge supérieure du pied de page.

--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ form > *
 {
     margin-top: 25px;
     display: flex;
+    flex-wrap: wrap;
     gap: 40px;
 }
 
@@ -266,7 +267,7 @@ form > *
 
 .footer
 {
-    margin-top: 25px;
+    margin-top: 65px;
     display: flex;
     justify-content: space-around;
     background-color: #f2f2f2;
@@ -426,6 +427,7 @@ figure
 
 /* TOGGLE SWITCHES */
 /* Plusieurs propriétés se répètent, penser à les regrouper ! */
+/* Explications détaillées du principe : https://css-tricks.com/the-checkbox-hack/ */
 
 /* Global propreties */
 
@@ -745,8 +747,9 @@ input:checked + .switch-bar-animals::after
     .activites__gallery
     {
         grid-auto-flow: initial;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        grid-template-rows: auto;
+        grid-template-columns: repeat(2, minmax(200px, 1fr));
+        grid-template-rows: repeat(4, 200px);
+        gap: 25px;
     }
     body 
     {
